--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,13 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  expandable_page_view: ^1.0.17
   flash: ^3.0.5+1
   flutter:
     sdk: flutter
 
   get: ^4.6.5
+  smooth_page_indicator: ^1.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
